2004-06-24 Niklas Knutsson  <nq@altern.org>

	* definitions -> subfunctions
	* save subfunctions
	* Function::countSubfunctions()
	* Fix for()
	* Fix creation of vectors with zero or one component
	* Pass parse options to function parsing
	* Variables might contain functions
	* Fix approximate integer printing
	* Fix try exact

2004-06-23 Niklas Knutsson  <nq@altern.org>

	* Release v. 0.6
	* Do not create a new thread for every calculation and printing

2004-06-21 Niklas Knutsson  <nq@altern.org>

	* ...

2004-06-18 Niklas Knutsson  <nq@altern.org>

	* Continue converting to new internal structures

2004-06-14 Niklas Knutsson  <nq@altern.org>

	* Continue converting to new internal structures

2004-05-25 Niklas Knutsson  <nq@altern.org>

	* Converting to new internal structures

2004-05-12 Niklas Knutsson  <nq@altern.org>

	* New internal structures (Manager -> MathStructure)

2004-04-05 Niklas Knutsson  <nq@altern.org>

	* Find linear function
	* Do not automatically recalculate on precision spinbutton update and add recalculate button to avoid annoying problems
	* More multiple root updates
	* Do not just clear the window, clear the pixbuf too
	* MatrixArgument->type should not return TEXT_ARGUMENT
	* Multiple roots updates

2004-04-04 Niklas Knutsson  <nq@altern.org>

	* Put in some restrictions and enable multiple roots
	* Disable multiple roots
	* Remove 0 == any number from Manager->equals
	* try x^(y+z) = x^y*x^z and x^(yz) = x^y^z

2004-04-03 Niklas Knutsson  <nq@altern.org>

	* Capitulate in search for exact as long as possible to fix alternatives
	* Recalculate directly on angle unit change
	* Enable multiple roots again
	* Do not ignore unsolvable comparison
	* Remove imaginary or real part present because of approximate floating point numbers
	* Do not display errors for arguments in exact precalculation
	* Do not display extra trailing zeros
	* Make comparison between floats in lower precision (but not less than user defined precision)